--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <h3>kiso eekgta</h3>
     <h3>kiso eekgta</h3>
     <h3>kiso eekgta</h3>
-    <h3>kiso eekgta</h3>
+    <h3>kiso eekgta</h3> <br>
+    <img src="img (1).png" alt=""> <br>
+    <img src="img (2).png" alt="">
+    <img src="img (3).png" alt="">
+
 </body>
 </html>
